feat: gera diagramas via Mermaid (Ollama) renderizados pelo Kroki